# image-processing-pipeline-poc

./: README.md  extract_pdf_data_llm.ipynb  langchain_load_pdf.py  langchain_load_pdf_aws.py  load_pdf_textract.py  pyproject.toml  talk_pdf_data_chat.ipynb
data/drawings/: README.md
